2014-12-19  Per Bothner  <per@bothner.com>

	* scheme/eval.scm (eval): Update call to pushNewModule.

2014-12-16  Per Bothner  <per@bothner.com>

	Better type-checking of 'values'.
	* misc.scm (values): Add validate-aply and compile-apply properties,
	* compile_misc.scm (valuesValidateApply, valuesCompile): New methods.

	* kawa/expression.scm (define-validate): Minor improvements.
	(visit-exp): Call InlineCalls#visit to gets its type-checking.

	* std_syntax.scm (?): Add a more precise error message.

	* characters.scm (char->integer): Change argument type to character.
	* compile_misc.scm (charToIntegerValidateApply): Change to match.

2014-12-12  Per Bothner  <per@bothner.com>

	* prim_imports.scm: Update call-with-values import.

2014-12-08  Per Bothner  <per@bothner.com>

	Implement the '?' operator.
	* prim_syntax.scm (if): Re-implement to support '?'.
	* std_syntax.scm (and): Likewise.
	* std_syntax.scm (?): Error if used standalone.
	* compile_misc.scm: Use '?' operator.
	* lists.scm: Likewise.

2014-12-01  Per Bothner  <per@bothner.com>

	* case_syntax.scm (clause-datums->exps): Add tr local variable.
	(tr): Remove global variable.

2014-11-26  Per Bothner  <per@bothner.com>

	* prim_imports.scm: New helper file with imports from Java classes.
	* Makefile.am: Update accordingly.
	* scheme/base.scm: Use prim_imports.scm.
	* scheme/r5rs.scm: Likewise.
	* syntax.scm: Likewise.
	* exceptions.scm: Add imports for named references in macros.
	* exceptions.scm (error): Use splice notation - emits better code.

2014-11-24  Per Bothner  <per@bothner.com>

	* syntax.scm: Import lambda and call-with-values - used by let-values.

2014-11-23  Per Bothner  <per@bothner.com>

	* DefineRecordType.scm (define-record-type): Add imports of definitions
	used in expanded macro.

	* prim_syntax.scm (%define-syntax): Define using an import.

2014-11-17  Jamison Hope  <jrh@theptrgroup.com>

	* kawa/quaternions.scm: Implement quaternion library.
	* Makefile.am: Update accordingly.